custom/custom.css
/* ... */
/*
 *  Sidebar / Logo
 */
#sidebar .logo {
    width: 100%;
    cursor: pointer;
}

#sidebar .logo img {
    display: block;
    width: 60%;
    margin: 10px auto 20px auto;
}

/*
 *  Sidebar / Menu Buttons
 */
#sidebar .buttons {
    position: fixed;
    top: 0;
    left: 345px;
    border-left: 5px solid rgba(0, 0, 0, 0);
    transition: 0.3s;
}

#sidebar.closed .buttons {
    left: 0;
    border-left: 0 solid var(--sbb-dark);
}

#sidebar .buttons ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

#sidebar .buttons li.deselected {
    width: 45px;
    height: 45px;
    background-color: var(--sbb-dark);
    margin: 10px 0;
    transition: 0.07s;
}

/* Hovering over deselected button has same style as selected button */
#sidebar .buttons li.deselected:hover, #sidebar .buttons li.selected {
    width: 65px;
    padding-left: 10px;
    background-color: var(--sbb-red);
    cursor: pointer;
}

/* Toggle sidebar button has different margins */
#sidebar .buttons li:first-child {
    margin-top: 0;
    margin-bottom: 30px;
}

/* Switch arrow direction when sidebar is closed */
#sidebar.closed .buttons li:first-child img {
    transform: rotate(180deg);
}

/* Last button requires no margin at bottom */
#sidebar .buttons li:last-child {
    margin-bottom: 0;
}

#sidebar .buttons li img {
    width: 45px !important;
    height: 45px !important;
    filter: invert(1);
}

/*
 *  Sidebar / Welcome
 */
.welcome p {
    padding-right: 5px;
    font-size: 15px;
    text-align: justify;
}

.welcome table {
    width: 100%;
    margin-top: 30px;
}

.welcome img {
    margin-top: -5px;
    max-width: 95%;
}

.welcome td {
    vertical-align: top;
}

.welcome td:nth-child(1) {
    width: 15%;
}

.welcome td:nth-child(2) {
    width: 85%;
}

/*
 *  Sidebar / Search
 */
.searchResults .count {
    margin: 5px 0;
    font-family: "SBB Web Bold", sans-serif;
    font-size: 19px;
}

.searchResults .searchItem {
    width: 100%;
    padding: 5px 0;
    border-top: 1px solid var(--sbb-dark);
    cursor: pointer;
}

.searchResults .searchItem:hover {
    background-color: var(--sbb-light-hov);
    font-weight: bold;
    color: var(--sbb-red);
}

/*
 *  Sidebar / Analyse
 */
.analyse .description {
    margin: 15px 0;
    padding: 1px;
    font-size: 15px;
    text-align: justify;
}

/*
 *  Sidebar / Options
 */
.options .tilePreview {
    margin: 10px 0;
    padding: 5px;
    background-color: var(--sbb-dark);
    color: var(--sbb-light);
    font-size: 16px;
    cursor: pointer;
}

/* Hovering over deselected tile layer has same style as selected tile layer */
.options .tilePreview.selected, .options .tilePreview:hover {
    background-color: var(--sbb-red);
}

.options .tilePreview img {
    width: 100%;
}

/*
 *  Sidebar / Help
 */
.help .description {
    margin: 15px 0;
    padding: 1px;
    font-size: 15px;
    text-align: justify;
}

.help .description img {
    display: block;
    margin: 20px auto;
    max-width: 80%;
}

.help table {
    margin-bottom: 25px;
}

.help td {
    padding: 15px 0 0 15px;
}

.help ol {
    margin-top: 15px;
    padding-left: 30px;
}

/*
 *  Sidebar / About
 */
.about p {
    font-size: 13px;
}

.about table {
    width: 100%;
}

.about img {
    display: block;
    width: 80%;
    margin: 7px auto;
    border-radius: 10px;
}

.about td {
    vertical-align: top;
}

.about td:nth-child(1) {
    width: 35%;
}

.about td:nth-child(2) {
    width: 65%;
}

.about .description {
    margin: 15px 0;
    padding: 1px;
    font-size: 15px;
    text-align: justify;
}

.about .description strong {
    font-size: 16px;
}

/*#########################################################
    BarChart
#########################################################*/

 .chart {
     height: 100% ;
     width: 100%;
   

    }
.chart .legend {
    fill: black;
    font: 12px sans-serif;
    text-anchor: start;
  }

  .chart text {
    fill: white;
    font: 8px sans-serif;
    text-anchor: end;
  }

  .chart .label {
    fill: black;
    font: 14px sans-serif;
    text-anchor: end;
  }

  .bar:hover {
    fill: brown;
  }

  .axis path,
  .axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
  }
/*
 *  Global
 */
.hidden {
    display: none;
}

/*#########################################################
    PieChart
#########################################################*/


#piechart {
    position: relative;
    /* To allow the tooltip to be positioned relative to the div */
    display: block;
    width: auto;
    margin: 0 auto;
  }

  .pietooltip {
    position: absolute;
    width: 100px;
    padding: 10px;
    background: #eee;
    color: #333;
    display: none;
    font-size: 12px;
    text-align: center;
    box-shadow: 0 0 5px #999;
    z-index: 10;
  }

  rect {
    cursor: pointer;
    stroke-width: 2;
  }

  rect.disabled {
    fill: transparent !important;
  }

  legend {
    font-size: 18px;
  }

  rect {
    stroke-width: 2;
  }

/*#########################################################
    LEAFLET
#########################################################*/

.tooltip {
    padding: 2px 10px;
    color: #FFF;
    background-color: var(--sbb-red);
    border: 0 solid var(--sbb-red);
    font-family: 'SBB Web Bold', sans-serif;
    font-size: 17px;
}



/*#########################################################
    MEDIA QUERIES
#########################################################*/

@media screen and (max-width: 470px) {
    #map {
        left: 290px;
        width: calc(100% - 290px);
    }

    #sidebar {
        width: 290px;
    }

    #sidebar.closed {
        left: -290px;
    }

    #sidebar .buttons {
        left: 285px;
    }

    h1 {
        font-size: 22px;
    }

    h2 {
        font-size: 20px;
    }
}

